# TimetableGenerator

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  release.sh  reset_save_files.sh  run.sh
include/: Crashes.hpp  JSON.hpp  Json.hpp  Logging.hpp  Searching.hpp  Settings.hpp  System.hpp  SystemInfo.hpp  Time.hpp  Timetable.hpp  Translations.hpp  UI.hpp  Updates.hpp  Utils.hpp  Web.hpp  my_mbedtls_config.h
include/UI/: About.hpp  Classes.hpp  Classrooms.hpp  Crashes.hpp  Faq.hpp  Lessons.hpp  NewVersion.hpp  Settings.hpp  Teachers.hpp  Wizard.hpp
include/UI/Classes/: Edit.hpp  Utils.hpp
include/UI/Classes/Edit/: CombineLessons.hpp  Rules.hpp
include/UI/Classrooms/: Edit.hpp
include/UI/Lessons/: Edit.hpp
include/UI/Teachers/: Edit.hpp
include/UI/Timetable/: Edit.hpp  Generate.hpp  Open.hpp
include/Widgets/: Application.hpp  Window.hpp
languages/: by.txt  pl.txt  ru.txt
resources/languages/: by.txt  en.txt  pl.txt  ru.txt
resources/locales/: template.pot
resources/locales/be/LC_MESSAGES/: TimetableGenerator.mo  TimetableGenerator.po
resources/locales/pl/LC_MESSAGES/: TimetableGenerator.mo  TimetableGenerator.po
resources/locales/ru/LC_MESSAGES/: TimetableGenerator.mo  TimetableGenerator.po
src/: Crashes.cpp  JSON.cpp  Json.cpp  Logging.cpp  Searching.cpp  Settings.cpp  System.cpp  SystemInfo.cpp  Time.cpp  Timetable.cpp  Translations.cpp  UI.cpp  Updates.cpp  Utils.cpp  Web.cpp  main.cpp  shell_minimal.html
src/Searching/: Scoring.cpp
src/Timetable/: Exporting.cpp  Load.cpp  Random.cpp  Save.cpp
src/Timetable/Export/: Excel.cpp
src/UI/: About.cpp  Classes.cpp  Classrooms.cpp  Crashes.cpp  Faq.cpp  Lessons.cpp  NewVersion.cpp  Settings.cpp  Teachers.cpp  Wizard.cpp
src/UI/Classes/: Edit.cpp  Submenus.cpp  Utils.cpp
src/UI/Classes/Edit/: CombineLessons.cpp  Rules.cpp
src/UI/Classrooms/: Edit.cpp
src/UI/Lessons/: Edit.cpp
src/UI/Teachers/: Edit.cpp
src/UI/Timetable/: Edit.cpp  Generate.cpp  Open.cpp
src/Widgets/: Application.cpp  Window.cpp
